@@ -34,6 +34,45 @@ class xPDOTransportVehicle extends xPDOVehicle {
     public $class = 'xPDOTransportVehicle';
 
     /**
+     * Copies the transport into the vehicle and transforms the payload for storage.
+     */
+    protected function _compilePayload(& $transport) {
+        parent :: _compilePayload($transport);
+        $body = array ();
+        $cacheManager = $transport->xpdo->getCacheManager();
+        if ($cacheManager) {
+            if (isset($this->payload['object'])) {
+                $object = $this->payload['object'];
+                $fileSource = $object['source'];
+                $body['source'] = $transport->signature . '/' . $this->payload['class'] . '/' . $this->payload['signature'] . '/';
+                $fileTarget = $transport->path . $body['source'];
+                $body['target'] = $object['target'];
+                $fileName = isset ($object['name']) ? $object['name'] : basename($fileSource);
+                $body['name'] = $fileName;
+                if (!is_writable($fileTarget)) {
+                    $cacheManager->writeTree($fileTarget);
+                }
+                if (file_exists($fileSource) && is_writable($fileTarget)) {
+                    $copied = false;
+                    if (is_file($fileSource)) {
+                        $copied = $cacheManager->copyFile($fileSource, $fileTarget . $fileName);
+                    }
+                    if (!$copied) {
+                        $transport->xpdo->log(xPDO::LOG_LEVEL_ERROR, "Could not copy file from {$fileSource} to {$fileTarget}{$fileName}");
+                        $body = null;
+                    }
+                } else {
+                    $transport->xpdo->log(xPDO::LOG_LEVEL_ERROR, "Source file {$fileSource} is missing or {$fileTarget} is not writable");
+                    $body = null;
+                }
+            }
+        }
+        if (!empty($body)) {
+            $this->payload['object'] = $body;
+        }
+    }
+
+    /**
      * Install the xPDOTransport represented by this vehicle into the transport host.
      */
     public function install(& $transport, $options) {
@@ -50,11 +89,13 @@ class xPDOTransportVehicle extends xPDOVehicle {
     protected function _installTransport(& $transport, $options) {
         $installed = false;
         $vOptions = $this->get($transport, $options);
-        if (isset($vOptions['source']) && isset($vOptions['target'])) {
+        if (isset($vOptions['object']) && isset($vOptions['object']['source']) && isset($vOptions['object']['target']) && isset($vOptions['object']['name'])) {
             if ($transport->xpdo->getDebug() === true)
                 $transport->xpdo->log(xPDO::LOG_LEVEL_DEBUG, "Installing Vehicle: " . print_r($vOptions, true));
             $state = isset($vOptions['state']) ? $vOptions['state'] : xPDOTransport::STATE_PACKED;
-            $object = xPDOTransport::retrieve($tansport->xpdo, $vOptions['source'], $vOptions['target'], $state);
+            $pkgSource = $transport->path . $vOptions['object']['source'] . $vOptions['object']['name'];
+            $pkgTarget = eval($vOptions['object']['target']);
+            $object = xPDOTransport::retrieve($transport->xpdo, $pkgSource, $pkgTarget, $state);
             if ($this->validate($transport, $object, $vOptions)) {
                 $installed = $object->install($vOptions);
                 if (!$installed) {
@@ -67,7 +108,7 @@ class xPDOTransportVehicle extends xPDOVehicle {
                 $transport->xpdo->log(xPDO::LOG_LEVEL_ERROR, 'Could not validate vehicle: ' . print_r($vOptions, true));
             }
         } else {
-            $transport->xpdo->log(xPDO::LOG_LEVEL_ERROR, 'Could not load vehicle!');
+            $transport->xpdo->log(xPDO::LOG_LEVEL_ERROR, 'Could not load vehicle: ' . print_r($vOptions, true));
         }
         return $installed;
     }
@@ -78,9 +119,13 @@ class xPDOTransportVehicle extends xPDOVehicle {
     public function uninstall(& $transport, $options) {
         $uninstalled = false;
         $vOptions = $this->get($transport, $options);
-        if (isset($vOptions['source']) && isset($vOptions['target'])) {
+        if (isset($vOptions['object']) && isset($vOptions['object']['source']) && isset($vOptions['object']['target']) && isset($vOptions['object']['name'])) {
+            if ($transport->xpdo->getDebug() === true)
+                $transport->xpdo->log(xPDO::LOG_LEVEL_DEBUG, "Installing Vehicle: " . print_r($vOptions, true));
             $state = isset($vOptions['state']) ? $vOptions['state'] : xPDOTransport::STATE_UNPACKED;
-            $object = xPDOTransport::retrieve($tansport->xpdo, $vOptions['source'], $vOptions['target'], $state);
+            $pkgSource = $transport->path . $vOptions['object']['source'] . $vOptions['object']['name'];
+            $pkgTarget = eval($vOptions['object']['target']);
+            $object = xPDOTransport::retrieve($transport->xpdo, $pkgSource, $pkgTarget, $state);
             if ($this->validate($transport, $object, $vOptions)) {
                 $uninstalled = $object->uninstall($vOptions);
                 if (!$uninstalled) {
@@ -93,7 +138,7 @@ class xPDOTransportVehicle extends xPDOVehicle {
                 $transport->xpdo->log(xPDO::LOG_LEVEL_ERROR, 'Could not validate vehicle: ' . print_r($vOptions, true));
             }
         } else {
-            $transport->xpdo->log(xPDO::LOG_LEVEL_ERROR, 'Problem instantiating object from vehicle: ' . print_r($vOptions, true));
+            $transport->xpdo->log(xPDO::LOG_LEVEL_ERROR, 'Could not load vehicle: ' . print_r($vOptions, true));
         }
         return $uninstalled;
     }
